--- a/process/01_data_filtering.ipynb
+++ b/process/01_data_filtering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "baa6ad52",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "from py import util\n",
+    "from helpers import util\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows', None)\n",
